--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,11 +59,17 @@ jobs:
           ruby-version: .ruby-version
           bundler-cache: true
 
+      - name: Prepare database
+        env:  
+          RAILS_ENV: test
+        run: bin/rails db:prepare
+
       - name: Run tests
         env:
           RAILS_ENV: test
-          # REDIS_URL: redis://localhost:6379/0
-        run: bin/rails db:prepare test test:system
+        run: |
+          bin/rails test
+          bin/rails test:system
 
       - name: Keep screenshots from failed system tests
         uses: actions/upload-artifact@v4
